--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,15 +6,17 @@
 
 <h2>Answers:</h2>
 
-<% @answers.each do |answer| %>
-  <time datetime="<%= answer.created_at %>">
-    <%= answer.created_at %>
-  </time>
-  <p><%= answer.body %></p>
-<% end %>
+<div class="answers">
+  <% @answers.each do |answer| %>
+    <time datetime="<%= answer.created_at %>">
+      <%= answer.created_at %>
+    </time>
+    <p><%= answer.body %></p>
+  <% end %>
+</div>
 
 <%= form_with model: [ @question, @answer ] do |f| %>
-  <%= f.label :body %>
+  <%= f.label :body, 'Your answer' %>
   <%= f.text_area :body%>
   <%= f.submit "Submit answer!"%>
 <% end %>
