--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,15 +7,10 @@
 <h2>Answers:</h2>
 
 <div class="answers">
-  <% @answers.each do |answer| %>
-    <time datetime="<%= answer.created_at %>">
-      <%= answer.created_at %>
-    </time>
-    <p><%= answer.body %></p>
-  <% end %>
+  <%= render 'answers' %>
 </div>
 
-<%= form_with model: [ @question, @answer ] do |f| %>
+<%= form_for [ @question, @answer ], remote: true do |f| %>
   <%= f.label :body, 'Your answer' %>
   <%= f.text_area :body%>
   <%= f.submit "Submit answer!"%>
